[package]
name = "rqjs-cli"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "rqjs-cli"
authors = ["ahaoboy"]
repository = "https://github.com/ahaoboy/rqjs"
homepage = "https://github.com/ahaoboy/rqjs"

[[bin]]
name = "rqjs"
path="./src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rquickjs = { version = "0.6.2", features = [
  "full-async",
  # "bindgen",
  "loader",
  "dyn-load",
] }
ctrlc = "3.4.4"
tokio = { version = "1", features = ["full"] }
rqjs-ext = { version = "0.1.3", path = "../rqjs-ext" }
colored = "2.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*