[package]
name = "rqjs-ext"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "rqjs-ext"
authors = ["ahaoboy"]
repository = "https://github.com/ahaoboy/rqjs"
homepage = "https://github.com/ahaoboy/rqjs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rquickjs = { version = "0.6.2", features = ["full-async", "bindgen"] }
ctrlc = "3.4.4"
once_cell = "1"
cross-uname = "0.1.0"
tokio = { version = "1", features = ["full"] }
fxhash = "0.2"
phf = "0.11"
encoding_rs = "0.8"
hex-simd = "0.8"
base64-simd = "0.8"
simd-json = "0.13"
itoa = "1.0.11"
ryu = "1.0.18"
rand = "0.8.5"
uuid = { version = "1.8.0", default-features = false, features = [
  "v1",
  "v3",
  "v4",
  "v5",
  "fast-rng",
] }
uuid-simd = "0.8.0"
ring = "0.17.8"
rustls = { version = "0.23.10", default-features = false, features = [
  "tls12",
  "ring",
] }
hyper = { version = "1.3.1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27.2", default-features = false, features = [
  "http2",
  "http1",
  "webpki-roots",
  "webpki-tokio",
  "ring",
] }
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
quick-xml = "0.33"
crc32c = { version = "0.6.8" }
crc32fast = "1.4.2"
# md-5 = { version = "0.10.6", features = ["asm"] }
md-5 = { version = "0.10.6" }
log = { version = "0.4" }
